--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,10 @@ dmypy.json
 .gitsecret/keys/random_seed
 !*.secret
 melanoma_phd/config/service_account_file.json
+
+# MAC
+.DS_store
+
+# project temp files
+.timestamp*
+.xlsx*
