--- a/melanoma_phd/config/database_config.yaml
+++ b/melanoma_phd/config/database_config.yaml
@@ -34,6 +34,7 @@ sections:
               5: ">6-12 meses ttm continuado"
               6: "grupo NATERA"
               7: "voluntarios sanos"
+              8: "extracción basal (antes de empezar cualquier tratamiento)"
 
         - gender:
             id: "SEXO"
